# prompt-braindump

./: README.md  chatgpt-prompt-summary.txt  pyproject.toml
blockade-skybox/: parse_and_get_images.sh  skybox.prompts
blockade-skybox/generated_images/: stunning_beautiful_surrealistic_vr_digital_painting_smooth_k__e491acdf4005c793__400729_e491acd.jpg.1
chatgpt/: 104ph9o.md  106rdhu.md  107zk8q.md  10ec8ps.md  10f7yl6.md  10i7vk9.md  10sqch3.md  10tb4al.md  10x5fy7.md  11495u7.md  114zegn.md  116n88b.md  116no01.md  11ihyyb.md  11wluro.md  11znkkj.md  12dr6fl.md  12e8j7v.md  12g17xy.md  12on0na.md  12tjm9z.md  135a888.md  13bbc7g.md  13esfxs.md  13mjzoy.md  13q1425.md  13tjtfa.md  141ebsu.md  14cfjd9.md  14cj7o0.md  14ewq4g.md  14xbl4w.md  151gqj7.md  15cqt7o.md  15iwlvm.md  15mjcgk.md  15qqved.md  16id9my.md  16mm9i6.md  16rpra7.md  (+332 more)
chatgpt-code/: mersenne10.py3  mersenne7.py3  mersenne8.py3  mersenne9.py3  sudoku1.py3  sudoku2.py3  sudoku3.py3  sudoku4.py3  sudoku5.py3  sudoku6.py3  sudoku7.py3  sudoku8.py3  sudoku9.py3
